--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,14 @@
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">登入</string>
     <string name="action_sign_up">註冊</string>
+    <string name="action_sign_out">登出</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="action_sign_up_short">Sign up</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid email or username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="upload_image">+</string>
+    <string name="action_profile">帳號</string>
+    <string name="action_home">主頁</string>
 </resources>
