--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="action_sign_in">登入</string>
     <string name="action_sign_up">註冊</string>
     <string name="action_sign_out">登出</string>
+    <string name="action_update_password">更換密碼</string>
+    <string name="action_update_username">更換名稱</string>
+    <string name="profile_email">Email:</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="action_sign_up_short">Sign up</string>
     <string name="welcome">"Welcome !"</string>
@@ -18,4 +21,8 @@
     <string name="upload_image">+</string>
     <string name="action_profile">帳號</string>
     <string name="action_home">主頁</string>
+
+    <!--Dialog-->
+    <string name="confirm">確認</string>
+    <string name="cancel">取消</string>
 </resources>
