--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="action_profile">帳號</string>
     <string name="action_home">主頁</string>
 
+    <!--DataItemList-->
+    <string name="no_data_warning">無資料，馬上新增一筆吧!</string>
+
     <!--Dialog-->
     <string name="confirm">確認</string>
     <string name="cancel">取消</string>
