--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="action_update_password">更換密碼</string>
     <string name="action_update_username">更換名稱</string>
     <string name="profile_email">Email:</string>
+    <string name="profile_house_num">溫室數量:</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="action_sign_up_short">Sign up</string>
     <string name="welcome">"Welcome !"</string>
